Getting errors related to modules and service worker

--- a/popup.html
+++ b/popup.html
@@ -82,6 +82,6 @@
   <textarea id="documentName" rows="1" cols="20" placeholder="Enter doc name"></textarea>
   <textarea id="documentLocation" rows="2" cols="20" placeholder="Enter doc location"></textarea>
   <button id="createDocument">Create Document</button>
-  <script src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
