Start creating token management page

--- a/tokenSettings.html
+++ b/tokenSettings.html
@@ -109,11 +109,11 @@
 </head>
 <body>
   <textarea id="documentName" rows="1" cols="20" placeholder="Enter doc name"></textarea>
-  <textarea id="documentLocation" rows="2" cols="20" placeholder="Enter doc location"></textarea>
   <div class="button-container">
-    <button id="manageToken" class="token-button">Token</button>  
-    <button id="createDocument">Create Document</button>
+    <button id="resetToken" class="reset-button">Clear Tokens</button>  
+    <button id="importToken" class="import-button">Import Token</button>  
+    <button id="exportToken" class="export-button">Export Token</button>  
   </div>
-  <script type="module" src="popup.js"></script>
+  <script type="module" src="tokenSettings.js"></script>
 </body>
 </html>
