Setup custom alert because old alert doesn't work well with small window.

--- a/popup.html
+++ b/popup.html
@@ -108,8 +108,8 @@
   </style>
 </head>
 <body>
-  <textarea id="documentName" rows="1" cols="20" placeholder="Enter doc name"></textarea>
-  <textarea id="documentLocation" rows="2" cols="20" placeholder="Enter doc location"></textarea>
+  <textarea id="documentName" rows="1" cols="20" placeholder="Document Name"></textarea>
+  <textarea id="documentLocation" rows="2" cols="20" placeholder="Document Location"></textarea>
   <div class="button-container">
     <button id="manageToken" class="token-button">Token</button>  
     <button id="createDocument">Create Document</button>
