--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      max-height: 400px;
     }
   
     button {
@@ -89,7 +90,6 @@
       overflow-y: auto;
       background-color: #2C2C2C; 
       color: #D3D3D3;
-      position: absolute;
       z-index: 1000;
       display: none;
     }
@@ -130,7 +130,7 @@
       display: flex;
       justify-content: space-between; /* Space out buttons */
       width: 100%;
-      margin-top: 10px;
+      margin-top: 5px;
     }
 
     
