--- a/popup.html
+++ b/popup.html
@@ -68,7 +68,7 @@
       margin: 10px;
       padding: 10px 0px; 
       font-size: 14px;
-      font-family: 'Courier New', monospace; 
+      font-family: 'Arial', sans-serif;
       background-color: #444; 
       border: 1px solid #888; 
       border-radius: 8px;
@@ -109,7 +109,7 @@
       margin: 10px;
       padding: 15px 20px; 
       width: 80%;
-      font-size: 16px; 
+      font-size: 14px; 
       background-color: #2C2C2C; 
       border: 1px solid #1E90FF;
       border-radius: 12px;
@@ -158,7 +158,7 @@
 </head>
   <body>
     <textarea id="documentName" rows="1" cols="20" placeholder="Document Name"></textarea>
-    <input type="text" id="folder-input" placeholder="Folder Name...">
+    <input type="text" id="folder-input" placeholder="Folder Name">
     <div id="suggestions"></div>
     <div id="selectedFolderDiv">
       <p id="selectedFolderLabel">Selected: </p>
